extension, or things which may require action on the part of
users or developers). Minor bugfixes and tweaks which don't
require any user or developer action are generally not included
in these release notes. For a full listing of all changes see
the source code repository at: http://git.wincent.com.

= Changes in 1.9

* NilClass#w method now accepts and optional parameters hash

= Changes in 1.8

* +pre+ tags may now take an optional +lang+ attribute to mark
  up the translated text for syntax-highlighting
* optimize use of ary_includes function, yielding a boost in
  performance of several percent

= Changes in 1.7

* many optimizations for speed: performance has improved for
  all input types and in some cases has more than doubled
  (the biggest gains are for inputs with more multi-byte UTF-8
  characters)
* uses less memory and usage tends to remain more constant
  due to less creation of temporary objects
* smaller memory footprint due to removal of dead code
* handle blank link text such as <tt>[[foo| ]]</tt>, making
  behaviour consistent with existing handling of zero-width
  link text (<tt>[[foo|]]</tt>)
* don't apply +external+ CSS class when rolling back failed
  internal links

= Changes in 1.6

* zero-length image targets (<tt>{{}}</tt>) are now passed through unchanged
  rather than turned into +img+ tags
* "absolute" image targets (all targets beginning with a leading
  forward slash) such as <tt>{{/foo.png}}</tt> can be used to suppress the
  image prefix that would otherwise be automatically prepended
* the +indent+ option to the Wikitext::Parser#parse method now accepts
  +false+ as a parameter to completely suppress all indentation
* internal +require+ statments now use absolute paths to ensure that
  files from other versions don't get pulled in inappropriately

= Changes in 1.5.3

* fixed broken handling of empty (zero-width) links such as
  <tt>[[]]</tt>, <tt>[[|]]</tt> and <tt>[[|foo]]</tt>